main.css
* {
box-sizing: border-box;
margin: 0;
padding: 0;
border: 0;
font: inherit;
vertical-align: baseline;
font-family: 'Volkhov', serif;
}

@media only screen and (min-width: 320px) {
  body {
    margin: 0;
    padding: 0;
    color: #FFFFFF;
  }

  header {
    background-color: #38618C;
    padding-bottom: 40px;
  }

  ul {
    list-style: none;
    padding-left: 0;
  }

  li, a {
    text-decoration: none;
    color: #FFFFFF;
    text-transform: lowercase;
  }

  p, a {
    text-decoration: none;
  }

  .fa {
    color: #FFe74C;
  }

  .hide-when-small {
    display: none;
  }

  .main-nav-link > a {
    font-size: 14px;
    color: #FFFFFF;
    text-shadow: 1px 1px 1px #2e3033;
  }

  .name, h2, h3, .project-link > a {
    color: #FFFFFF;
    font-family: 'Abril Fatface', cursive;
  }

  .nav-flex {
    display: flex;
    justify-content: space-around;
    padding-top: 20px;
    padding-bottom: 20px;
    background-color: #35A7ff;
  }

  .name-headshot {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .name {
    padding-top: 50px;
    font-size: 42px;
    text-shadow: 3px 3px 3px #2e3033;
  }

  .name-headshot > img {
    margin-top: 22px;
    width: 25vw;
  }

  .about {
    padding-top: 22px;
    padding-left: 24px;
    padding-right: 24px;
    padding-bottom: 18px;
    margin-left: 12px;
    margin-right: 12px;
    line-height: 290%;
    font-size: 14px;

  }

  .work {
    display: flex;
    flex-direction: column;
    align-items: center; 
    padding-top: 48px;
  
  }

  .work > h2, .project-description {
    color: #FFFFFF;
  }

  hr {
    height: 4px;
    width: 80%;
    background-color: #FFFFFF;
    margin-top: 10px;
    margin-bottom: 8px;
  }

  .hr-short {
    height: 2px;
    width: 80%;
    background-color: #FFFFFF;
  }

  h1, #about {
    color: #FFFFFF;
  }

  h2 {
    font-size: 36px;
  }

  h3, .project-description {
    color: #FFFFFF;
  }

  #work {
    background-color: #38618C;
    color: #FFFFFF;
    text-shadow: 1px 1px 1px #2e3033;
  }

  .work > h2 {
    color: #FFe74C;
  }

  .project {
    background-color: #38618C;
    padding-left: 0px;
    padding-right: 0px;
    width: 100%;
    padding-top: 30px;
  }

  .project-one-title-img, .project-two-title-img, .project-three-title-img, .project-four-title-img {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .project-one-flex, .project-two-flex, .project-three-flex, .project-four-flex {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .project-description {
    color: #FFFFFF;
    font-size: 16px;
    padding-left: 25px;
    padding-right: 20px;
    line-height:175%;
    margin-top: 15px;
  }

  .project-one-flex > h3, .project-two-flex > h3 , .project-three-flex > h3 , .project-four-flex > h3 {
    font-size: 25px;
    text-shadow: 2px 2px 2px #2e3033;
    /*color: #FFe74C;*/
  }

  .project-one-title-img > img, .project-two-title-img > img , .project-three-title-img > img , .project-four-title-img > img  {
    width: 40vw;
    margin-bottom: 25px;
  }

  .project-links-ul {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }

  .project-link-live {
    margin-right: 25px;
  }

  .project-link-github {
    margin-left: 25px;
  }

  .project-links {
    margin-top: 20px;
  }

  .project-link > a {
    color: #FFe74C;
    font-size: 16px;
  }

  .project-stack {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    margin-top: 25px;
    margin-bottom: 25px;
  }

  .project-stack > img {
    height: 10%;
    width: 10%;
  }

  .node-logo {
    margin-top: 10px;
  }

  .contact-link > a {
    color: #FFFFFF;
  }

  .contact {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: 36px;
    background-color: #35A7ff;
    text-shadow: 1px 1px 1px #2e3033;
  }

  .contact > h2 {
    text-shadow: 2px 2px 2px #2e3033;
  }

  .icon-stack {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .contact-links {
    width: 80%;
    padding-bottom: 20px;
  }

  .contact-info-flex {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin-top: 10px;
  }

  .google-stack {
    margin-right: 20px;
  }

  .email-stack{
    margin-left: 20px;
  }

  .info-form-flex {
    display: flex;
    flex-direction: column;
    width: 75%;
    align-items: center;
  }

  .info-form-flex > label {
    margin-bottom: 1px;
  }

  .info-form-flex > input {
    margin-bottom: 30px;
    padding: 10px;
  }

  .info-form-flex > textarea {
    padding: 20px;
  }

  .send-message {
    margin-top: 30px;
    border-radius: 25%;
    background-color: #FFe74C;
    color: #38618C;
    box-shadow: 1px 1px 2px #2e3033;
  }

}

@media only screen and (min-width: 480px) {
  .hide-when-small {
    display: none;
  }

  .main-nav-link > a {
    font-size: 16px;
  }

  .name {
    font-size: 60px;
  }

  .about {
    font-size: 17px;
  }

  .work > h2 {
    font-size: 40px;
  }

  .project-one-flex > h3, .project-two-flex > h3 , .project-three-flex > h3 , .project-four-flex > h3 {
    font-size: 30px;
  }

  .project-stack > img {
    height: 8%;
    width: 8%;
  }

  .project-stack {
    margin-top: 40px;
    margin-bottom: 40px;
  }

  .node-logo {
    margin-top: 15px;
  }

  .project-description {
    font-size: 18px;
  }

  .project-link > a {
    font-size: 18px;
  }

  #contact {
    padding-bottom: 30px;
  }

  .contact > h2 {
    font-size: 46px;
  }

} 

@media only screen and (min-width: 768px) {
  .hide-when-large {
    display: none;
  }

  .hide-when-small {
    display: flex;
  }
  
  .nav-flex {
    padding-top: 40px;
    padding-bottom: 40px;
  }

  .main-nav-link > a {
    font-size: 20px;
  }

  .name {
    padding-top: 85px;
    font-size: 86px;
  }

  .name-headshot > img {
    width: 20vw;
  }

  .about {
    font-size: 24px;
    padding-top: 35px;
    padding-right: 50px;
    padding-left: 50px;
  }

  .work {
    padding-top: 80px;
  }

  .work > h2 {
    font-size: 60px;
  }

  .node-logo {
    margin-top: 20px;
  }

  .project {
    background-color: #565b63;
    padding-left: 0px;
    padding-right: 0px;
    width: 100%;
  }

  .project-description {
    padding-right: 0px;
  }

  .project-one-title-img, .project-two-title-img, .project-three-title-img, .project-four-title-img {
    display: flex;
    flex-direction: row;
    justify-content: space-around; 
  }

  .project-one-flex > h3 {
    font-size: 40px;
    margin-left: 35px;
  }

  .project-one-title-img > img {
    width: 35vw;
    margin-top: 25px;
    margin-left: 65px;
    margin-bottom: 45px;
  }

  .project-one-flex, .project-two-flex, .project-three-flex, .project-four-flex {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-right: 35px;
    padding-left: 25px;
  }

  .project-links {
    margin-top: 20px;
  }

  .project-link > a {
    color: #27ae60;
  }

  .project-one-stack-flex, .project-two-stack-flex, .project-three-stack-flex, .project-four-stack-flex {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .project-stack {
    margin-top: 40px;
  }

  .project-two-flex > h3 {
    font-size: 40px;
    margin-top: 15px;
    margin-left: 35px;
  }

  .project-two-title-img > img {
    width: 35vw;
    margin-top: 25px;
    margin-left: 25px;
    margin-right: 55px;
    margin-bottom: 45px;
  }

  .project-two-flex > .project-description {
    padding-left: 35px;
  }

  .project-three-flex > h3 {
    font-size: 40px;
    margin-top: 15px;
  }

  .project-three-title-img > img {
    width: 40vw;
    margin-top: 25px;
    margin-left: 55px;
    margin-bottom: 45px;
  }

  .project-four-title-img > img {
    width: 35vw;
    margin-top: 25px;
    margin-left: 55px;
    margin-right: 55px;
    margin-bottom: 45px;
  }

  .project-four-flex > h3 {
    font-size: 40px;
    margin-top: 15px;
    margin-left: 35px;
  }

  .project-four-flex > .project-description {
    padding-left: 35px;
  }

  .project-link > a {
    font-size: 18px;
  }

  .contact > h2 {
    font-size: 46px;
  }

}

@media only screen and (min-width: 992px) {
  .name-headshot > img {
    width: 15vw;
  }

  .about {
    padding-left: 80px;
    padding-right: 80px;
  }

  .project-one-title-img > img, .project-three-title-img > img {
    margin-left: 100px;
  }

  .project-one-flex, .project-three-flex {
    margin-right: 85px;
  }

  .project-one-flex > .project-description {
    padding-left: 40px;
  }

  .project-two-flex > .project-description, .project-four-flex > .project-description {
    margin-left: 50px;
  }

  .project-two-title-img > img, .project-four-title-img > img {
    margin-right: 100px;
  }

  .project-stack {
    margin-top: 50px;
    margin-bottom: 50px;
  }

}

@media only screen and (min-width: 1200px) {
  .about {
    padding-left: 100px;
    padding-right: 100px;
  }

  .project-one-title-img > img, .project-three-title-img > img {
    margin-left: 130px;
  }

  .project-two-title-img > img, .project-four-title-img > img {
    margin-right: 130px;
  }

  .project-two-flex > .project-description, .project-four-flex > .project-description {
    margin-left: 80px;
  }

  .project-stack > img {
    width: 6vw;
  }

  .node-logo {
    margin-top: 30px;
  }


}

